Add radio and submit buttons

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,12 @@
 /* Stylesheet */
+header{
+    text-align: center;
+}
+
+.content{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
