--- a/styles.css
+++ b/styles.css
@@ -26,11 +26,11 @@ body{
     background-color:rgba(240, 248, 255, 0.501);
     border-radius: 8px;
     font-size: 14px;
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
 #apply-button:hover{
-    border-radius: 9px;
-    font-size: 15px;
+    transform: scale(1.1);
     box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 .submit{
@@ -39,7 +39,9 @@ body{
 }
 
 .image{
-    margin: auto;
+    display: flex;
+    justify-content: center;
+    flex: 0 0 80%;
 }
 
 
